--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://git.io/fjHxp" rel="nofollow">´ó¼ÍÔª</a> | <a href="https://git.io/fjHxh" rel="nofollow">¶¯Ì¬Íø</a> | <a href="https://git.io/fjHpv" rel="nofollow">ÉñÖÝ</a> | <a href="https://git.io/fjHpJ" rel="nofollow">ÍËµ³</a> | <a href="https://git.io/fjHpU" rel="nofollow">¾ÅÆÀ</a> | <a href="https://git.io/fjHpT" rel="nofollow">ÍøÃÅ</a> | <a href="https://git.io/fjHpk" rel="nofollow">ÉñÔÏ</a> | <a href="https://git.io/fjHpI" rel="nofollow">ÐÂ¼ÍÔª</a> | <a href="https://git.io/fjHpL" rel="nofollow">¿´ÖÐ¹ú</a> | <a href="https://git.io/fjHpt" rel="nofollow">Ã÷»ÛÍø</a> | <a href="https://git.io/fjHpq" rel="nofollow">Ã÷»ÛÊ®·½</a> | <a href="https://git.io/fj9lQ" rel="nofollow">Ã÷»Û½¹µã</a> | <a href="https://git.io/fjHpm" rel="nofollow">Ï£ÍûÖ®Éù</a> | <a href="https://git.io/fjHpY" rel="nofollow">ÂþÌ¸µ³ÎÄ»¯</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">ÐÂÌÆÈË</a> | <a href="https://git.io/JervF" rel="nofollow">ÑÇÌ«Ì¨</a> | <a href="https://git.io/fjHpG" rel="nofollow">Ö±²¥</a> | <a href="https://git.io/fj9lp" rel="nofollow">´«Ææ</a> | <a href="https://git.io/fj9lX" rel="nofollow">Éñ»°</a> | <a href="https://git.io/fjHpZ" rel="nofollow">ÈËÉú</a> | <a href="https://git.io/fjFNJ" rel="nofollow">Î±»ð</a > | <a href="https://git.io/fjHpc" rel="nofollow">ÕæÏàÆ¬</a> | <a href="https://git.io/fj9lK" rel="nofollow">²Ø×ÖÊ¯</a> | <a href="https://git.io/fj9l5" rel="nofollow">¶ÌÊÓÆµ</a> | <a href="https://git.io/fjHpW" rel="nofollow">¸æËßÎ´À´</a > | <a href="https://git.io/fjHpl" rel="nofollow">ÖÕ¼¶Ä¿µÄ</a> | <a href="https://git.io/fj9lM" rel="nofollow">ÖÐ¹²»îÕª</a > | <a href="https://git.io/fjHp4" rel="nofollow">·çÓêÌìµØÐÐ</a></p></td></tr>
-<tr><td VALIGN=TOP width="355"><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721587.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1126143684-600x400-320x200.jpg">Ò»ÕÅ±í¿´¶®ÖÐÃÀµÚÒ»½×¶ÎÃ³Ò×Ð­Òé</a><br><h2><p><hr><strong>ÅÅÐÐ°ñ</strong></p></h2>
+<tr><td VALIGN=TOP width="355"><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722668.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/01/GettyImages-1058995286-320x200.jpg">ÃÀÖÐµÚÒ»½×¶ÎÃ³Ò×Ð­Òé °Ë´ó¿´µãÒ»´Î¿´¶®</a><br><h2><p><hr><strong>ÅÅÐÐ°ñ</strong></p></h2>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11707668.md#1">ÖÐ¹úÕ®ÎñÎ¥Ô¼¶ñ»¯ Ì¨11ÒøÐÐÁªºÏ´û¿îÖÐÆó²ÈÀ×</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11711891.md#1">ÄÐ×Ó7ÈÕ5´ÎÌá1ÍòÃÀÔªÏÖ³® ÖÐÐÐ³ÐµÂ·ÖÐÐ±»·£</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718851.md#1">ÏÃÃÅµØÌúµØÃæËúÏÝ 2³µ×¹Èë ´óÁ¿»ýË®Ó¿Èë</a><br>
@@ -11,6 +11,7 @@
 <br><p><a href="https://github.com/alzmt2820/djy/blob/master/gb/nscrw413.md#1">¸ü¶à......</a></p><hr><h2><p><strong>½ñÈÕÆÀÂÛ</strong></p></h2>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722111.md#1">¡¾Ãû¼Ò×¨À¸¡¿Îª»ôÂåÎ¬´Ä±¨¸æ»¶ºôÕß¸ßÐË¹ýÔçÁË</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722430.md#1">ÐìÐÐ£º´ÓÃÀ¹úÐ¡¿¤Í¨¹ýÏã¸ÛÈËÈ¨¾öÒéÌ¸Æð</a><br>
+<a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722272.md#1">º£·ç£ºÃ÷»ÛÍø¡°¶ñÈË°ñ¡±³ÉÁËÑÖÍõÒ¯µÄ¡°ÉúËÀ±¡¡±</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722076.md#1">Ô¬±ó£ºÖÐ¹²ÑÏ¹ÜÑÝ³öÊÐ³¡ ÏàÉùÃ÷ÐÇÓ¦ÉùÌÉÇ¹</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721651.md#1">ÖÜÏþ»Ô£º¾­¼ÃÀ§ÄÑ³¬ÏëÏñ ±±¾©¿ªÒ©·½Òýð²Ö¹¿Ê</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721707.md#1">³ÂË¼Ãô£ºÖÐ¹²¡°ÁùÎÈ¡±¾ÍÒµ×î²»ÎÈ</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719585.md#1">¡¾Ãû¼Ò×¨À¸¡¿¡°¸»ÈËË°¡±ÊÇÔÚ¡°½Ù¸»¼ÃÆ¶¡±£¿</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720077.md#1">ÀîÃú£º¾¯²ì¿áÐÌÆÈº¦ ÖÐ¹²Ãð¾øÈËÐÔ</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719997.md#1">Ô¬±ó£ºGDPÈ«ÇòµÚ¶þÓë¹ØÑº¼ÇÕßÊÀ½ç×î¶à</a><br>
-<a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11719442.md#1">»ÆÌì³½£ºÅÌµãÃûÈËéóÊÂ ÎªÖÐ¹²Õ¾Ì¨µÄ¡°ÀñÎï¡±</a><br>
 <br><p><a href="https://github.com/alzmt2820/djy/blob/master/gb/news392.md#1">¸ü¶à......</a></p><hr><h2><p><strong>¶À¼ÒÊÓ½Ç</strong></p></h2>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11705858.md#1">ÃÀÖÐ¹ØÏµ¿ìËÙ¶ñ»¯ Ñ§Õß£ºÐÂÀäÕ½ÒÑ¿ªÊ¼</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706190.md#1">¡¾ÐÂÎÅ¿´µã¡¿¸Û¾¯Ò»¸ç¸°¾©Ç°º°»° ÃñÕóÅ­í¡</a><br>
@@ -33,19 +33,20 @@
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722726.md#1">ÍâÉûÅ®·¢Æ¬Í¦·´ËÍÖÐ±¬ºì ÌÆÓ¢Äê¼±Æ²Çå</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722655.md#1">¡¾ÐÂÎÅ´óÆÆ½â¡¿×¨¼ÒÔ¤¿´2020Ì¨¸Û¹Ø¼ü´óÄê</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722138.md#1">¡¾·­Ç½±Ø¿´¡¿Ã³Ò×Õ½ ÖÐ¹²×÷³öÖØ´óÈÃ²½</a><br>
+<a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721610.md#1">¡¾Ãû¼Ò×¨À¸¡¿ÖÐ¹²ÔÚ°ÄÖÞ¼äµý»î¶¯²þâ±</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722482.md#1">·´ËÍÖÐ³ÖÐø°ëÄê ³Â·½°²Éú¹«¿ªÅúÆÀÁÖÖ£</a><br>
+<a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11722009.md#1">¡¶ÊÖ×ãÍ¬Í¾¡·³ÅÏã¸Û ´ó¼ÍÔª¡¢ÐÂÌÆÈËÍÆÐÂ¸è</a><br>
+<a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721587.md#1">Ò»ÕÅ±í¿´¶®ÖÐÃÀµÚÒ»½×¶ÎÃ³Ò×Ð­Òé</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722376.md#1">ÃÀÖÐ´ï³ÉµÚÒ»½×¶ÎÃ³Ò×Ð­Òé Ë­ÊÇÓ®¼Ò</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722295.md#1">¡¾ÅÄ°¸¾ªÆæ¡¿¸ÛÈËÈçºÎÈ¡Ê¤£¿ÃÀÖÐÐ­ÒéÓÐÀ×Çø</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722237.md#1">Ïã¸Û¿¹ÕùÎ´Æ½Ï¢ Ï°½üÆ½½«·ÃÎÊ°ÄÃÅÒý¹Ø×¢</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722340.md#1">ÈËÈ¨ÈÕÂÛÌ³ Ê±ÕþÍøºì½²Êö¡°Á½¸öÖÐ¹úµÄ¹ÊÊÂ¡±</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722314.md#1">ÍõºÕ £ºÖÐÃÀÐ­Òé ´¨ÆÕÓÖÀ­Ï°½üÆ½Ò»°Ñ</a><br>
-<a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722272.md#1">º£·ç£ºÃ÷»ÛÍø¡°¶ñÈË°ñ¡±³ÉÁËÑÖÍõÒ¯µÄ¡°ÉúËÀ±¡¡±</a><br>
-<a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721234.md#1">ÖÐÑë¾­¼Ã¹¤×÷»áÒéÎÞÐÂÒâ ·ÖÎö£ºÖÐ¹²ÄÑÎÈ¾ÍÒµ</a><br>
-<a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11722009.md#1">¡¶ÊÖ×ãÍ¬Í¾¡·³ÅÏã¸Û ´ó¼ÍÔª¡¢ÐÂÌÆÈËÍÆÐÂ¸è</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718825.md#1">×·²é¹ú¼ÊÖ÷Ï¯£ºÖÐ¹²Å«¹¤²úÒµÎ£º¦ÃÀ¹ú¼°ÊÀ½ç</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722514.md#1">¹ú¼Ê×éÖ¯£º´óÂ½¾§Æ¬ÉÌ»ñÕþ¸®²¹Ìù¹æÄ£¹ÚÈ«Çò</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722439.md#1">ÔÆÄÏ¸ßÔºÔ­Ôº³¤±»´¦·Ö ÔøÉæËïÐ¡¹û°¸</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721781.md#1">µÂ¹úÁ½´óÖ´Õþµ³ÁªÊÖ ÄâÁ¢·¨·âÉ±»ªÎª</a><br>
+<a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721234.md#1">ÖÐÑë¾­¼Ã¹¤×÷»áÒéÎÞÐÂÒâ ·ÖÎö£ºÖÐ¹²ÄÑÎÈ¾ÍÒµ</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721813.md#1">ÈÈÒÀÔúÎª½ÇÉ«»Ñ³Æ»áÆïÂí ÓÖÎªÔ²»ÑÂäÏÂ²¡¸ù</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721543.md#1">´«Ïã¸ÛTVBÔÂµ×²ÃÔ±½üÇ§ ½ÚÄ¿ÖÆ×÷²¿Õ¼´óÍ·</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721891.md#1">ÉîÛÚ±¦°²·¢Éú¶àÆðÉ§ÈÅ·¨ÂÖ¹¦Ñ§Ô±ÊÂ¼þ</a><br>
@@ -53,7 +54,6 @@
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721958.md#1">ÖÐ·½ÊÇ·ñ¶ÒÏÖÐ­Òé³ÐÅµ ´¨ÆÕÁ½Ä»ÁÅËµÒª¹Û²ì</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721901.md#1">¡¾Ãû¼Ò×¨À¸¡¿ÃÀ¹úÖÕÓÚÓÐÁËÕýÈ·µÄ¶Ô»ªÕþ²ß</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721849.md#1">ÖÐ¹ú¾­¼Ã¸ß³É±¾µÍÐ§ÂÊ Ñ§Õß£ºÍÑÊµÏòÐé</a><br>
-<a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721610.md#1">¡¾Ãû¼Ò×¨À¸¡¿ÖÐ¹²ÔÚ°ÄÖÞ¼äµý»î¶¯²þâ±</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721564.md#1">¡¾ÐÂÎÅ¿´µã¡¿±±¾©Ã³Ð­ÖØ´óÈÃ²½ ÃÀÖÐÍÑ¹³³ÖÐø</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721754.md#1">ÃÀÖÐ´ï³ÉÃ³Ò×Ð­Òé Çå»ªÑ§Õß£ºÖÐ¹²×ö³öÍ×Ð­</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721807.md#1">ÉÏº£¼ÎÀïÁ¸ÓÍ¹«Ë¾Í»·¢´ó»ð Å¨ÑÌ¸ß´ï°ÙÃ×</a><br>
@@ -88,7 +88,7 @@
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720210.md#1">¾­³£½Ó´¥ÉúÇÝÎÞ·À»¤ ºþÄÏ²Ë³¡Ð¡··È¾²¼²¡</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718180.md#1">11ÔÂ·Ý ÖÁÉÙ325Ãû·¨ÂÖ¹¦Ñ§Ô±Ôâ°ó¼Ü</a><br>
 <a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720497.md#1">É½¶«Ò»ÄÐ×Ó³Öµ¶ÉËÈË ÖÂ2ËÀ1ÉË</a><br>
-<br><p><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ">ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³">¾ÅÆÀ¹²²úµ³</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ">¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"">ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý">ÆÊÎö1400Àý</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì">Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°">Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯">¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª">ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½">ÌúÖ¤ÈçÉ½</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ">Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦">µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ">ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá">Ë«³ÇÑªÀá</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤">ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720">´Ó610µ½720</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ">ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà">ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó">±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513">¼ûÖ¤513</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ">¹¦·ò Ñ°µÀ</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£">¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ">ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ">ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://d3bsf6sx49yq4k.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²">Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ">ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª">¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·">Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨">303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î">º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½">Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°">²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
+<br><p><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ">ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³">¾ÅÆÀ¹²²úµ³</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ">¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"">ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý">ÆÊÎö1400Àý</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì">Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°">Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯">¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª">ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½">ÌúÖ¤ÈçÉ½</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ">Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦">µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ">ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá">Ë«³ÇÑªÀá</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤">ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720">´Ó610µ½720</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ">ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà">ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó">±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513">¼ûÖ¤513</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ">¹¦·ò Ñ°µÀ</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£">¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ">ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ">ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://d2l2plm4nxdu7i.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²">Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ">ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª">¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·">Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨">303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î">º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½">Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/alzmt2820/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°">²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719596.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/201912139t-150x120.jpg"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719596.md#1">¡¾ÅÄ°¸¾ªÆæ¡¿¸ÛÈËÊ§×Ù4½á¾Ö 6Ç§ÈË±»×¥È¥ÄÄÁË</a><br>¾¯·½½üÈÕ¹«²¼£¬·´ËÍÖÐÖÁ½ñÒÑÓÐ³¬¹ý6, ...<br><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719713.md#1">Ïã¸Û4.3ÍòÈË³öÏ¯6.12°ëÖÜÄê¼¯»á</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718936.md#1">ÃÀÁªÉç¼ÍÄî±»ÖÐ¹²ÒÔ¼äµý×ïÉ±º¦µÄÖÐ¹ú¼ÇÕß</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11719012.md#1">¡¾ÐÂÎÅ¿´µã¡¿ÁÖÖ£½ÓÁ¬±»´òÁ³ ±±¾©¸ÃÏëÏëÁË</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717070.md#1">¡¶¹éÍ¾¡·ÈëÎ§¶à¹úµçÓ°½Ú ¸÷´óÖÞ×¨ÒµÈËÊ¿ÔÞÉÍ</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11719079.md#1">À´ÁË±ðÏë×ß ººÈËÂä»§ÐÂ½® ÓûÇ¨»Ø»§¿ÚÔâ¾Ü</a><br><br><p><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720188.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/05/20190514-HUAMING-HONGKONG-03-150x120.jpg"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720188.md#1">¸»Ê¿¿µÔÙ¶È¼õ³Ö°¢Àï¹ÉÆ± Ì×ÏÖ2.7ÒÚÃÀÔª</a><br>Ì¨Íåºèº£¼¯ÍÅÆìÏÂµÄ¸»Ê¿¿µ´´Í¶£¨Foxc ...<br><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11714551.md#1">ÅÌµã2020Äê×î´óµÄÖÐ¹ú¡°»ÒÏ¬Å£¡±</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719819.md#1">¸ÛÃ½£ºÖÐ¹²ÁùÕÐÑÏ¿ØÆóÒµ ¹ú½øÃñÍËÓÇÂÇ¼Ó¾ç</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719692.md#1">ÏûÏ¢£ºÖÐ·½³ÐÅµÂò500ÒÚÃÀ²úÆ· »»È¡¹ØË°ÍÆ³Ù</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11719273.md#1">ÍâÃ½£ºÖÐ¹ú·¿µØ²úÊÐ³¡µ÷¿Ø½øÈëÃô¸ÐÆÚ</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11719209.md#1">ÃÀÖÐÔ­ÔòÉÏ´ï³ÉµÚÒ»½×¶ÎÐ­Òé</a><br><br><p><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11719387.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/170321232150100311-150x120.jpg"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11719387.md#1">·¶±ù±ùÉ¹ÔÚÃÀ¹¤×÷ÊÓÆµ Ôç²Í³ÔÈý¿ÅÔæÎª¼õ·Ê£¿</a><br>µ±µØÊ±¼ä12ÔÂ11ÈÕ£¬·¶±ù±ùÔÚ¡°·¶±ù±ù ...<br><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719940.md#1">ÖÐ¹²¾­¼Ã»áÒé½áÊø Æß³£Î¯³öÏ¯²»¼ûÍõáªÉ½</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11719474.md#1">¡¾ÃÀ¹úË¼ÏëÁìÐä¡¿°àÅ©×¨·Ã ÊÓÆµ×ÖÄ»°æ£¨ÉÏ£©</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11719243.md#1">¡¾ÈÈµã»¥¶¯¡¿µçÄÔÉè±¸ÓÃ¹ú»õ ÖÐ¹²ÓûÓëÎ÷·½ÍÑ¹³</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11719438.md#1">·´ËÍÖÐ°ëÄê ÖÐ»·³¬4ÍòÈË¼¯»á¡°ÆëÉÏÆëÂä¡±</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11719148.md#1">ÕÔÞ±ÕÉ·ò»ÆÓÐÁú±»ÆðËß ¸ÛÃûæÂ²ÌÒ»·ï×·ÌÖ¾Þ¿î</a><br><br><p><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÌìÔÖÈË»ö</strong></p></h2><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718851.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/Unknown-3-150x120.jpg"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718851.md#1">ÏÃÃÅµØÌúµØÃæËúÏÝ 2³µ×¹Èë ´óÁ¿»ýË®Ó¿Èë</a><br>¼Ì¹ãÖÝÊÐÇøÖ÷¸ÉµÀ12ÔÂ1ÈÕ·¢ÉúµØÃæËúÏ ...<br><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722469.md#1">É½¶«Ò»¶¯ÎïÔ°Î¬ÐÞ¹¤ÒÉ±»»úÆ÷¼·Ñ¹ÉíÍö</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717219.md#1">É½¶«90ºóÄÐ×Ó¾ÈÇáÉúÅ®Ë«Ë«ÓöÄÑ</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717105.md#1">´óÂ½×îÐÂ·ÇÖÞÖíÎÁÒßÇé ÉÂÎ÷ÓÐÒ°ÖíËÀÍö</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717137.md#1">ÁÉÄþ¸§Ë³Ê¯ÓÍ¶þ³§Í»·¢´ó»ð »ð¹â³åÌì</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716656.md#1">ÒßÇéÀ©´ó ¹þ¶û±õÔÙÓÐ13ÃûÑ§Éú¸ÐÈ¾²¼²¡</a><br><br><p><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid280.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719653.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2009/12/912110904231849-150x120.jpg"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719653.md#1">¹ãÖÝÒ»ÖÐÑ§±¬·¢¼×ÐÍÁ÷¸Ð 114Ñ§ÉúÈ¾²¡</a><br>¹ãÖÝÊÐÀóÍåÇø½ÌÓý¾Ö12ÔÂ12ÈÕÍ¨±¨£¬¹ã ...<br><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722193.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2019/12/13£©</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719825.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2019/12/12£©</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718922.md#1">¡¾¿ìÑ¶¡¿Ó¢¹ú´óÑ¡ ³ö¿ÚÃñµ÷ÏÔ±£ÊØµ³´óÊ¤</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718850.md#1">ÖÐ¹ú¸ßÐ£ÐÔ³óÎÅ²»¶Ï Äþ²¨´óÑ§¸±½ÌÊÚÒ²³öÊÂ</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718944.md#1">ËÄÍò¶ÖÖÐÑë´¢±¸Èâ¾º¼ÛÍ¶·Å ¹úÆó´ó·¢¹úÄÑ²Æ</a><br><br><p><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718879.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/01/dongxin-20190102-xiena-zhaoliying-150x120.jpg"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718879.md#1">ÔìÐÍÄ£·Â»¨Ç§¹Ç Ð»ÄÈº°»°ÕÔÀöÓ±£ºÐø¼¯ÎÒ½ÓÑÝ</a><br>Æ½Ê±Óë´óÂ½Å®ÐÇÕÔÀöÓ±»¥³Æ¡°´ó¸ç¡±¡° ...<br><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716545.md#1">µÏÊ¿ÄáµçÓ°ÄêÆ±·¿ÆÆ100ÒÚÃÀÔª ´´Ó°Ê·¼ÍÂ¼</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715454.md#1">Ê¦µÂÉ¥¾¡ ±±´ó½ÌÊÚÓë¶àÈËÓÐ²»Õýµ±¹ØÏµ</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11712329.md#1">¡¶¼Ù¿××ÓÖ®Ãû¡·Ä½ÄáºÚ·ÅÓ³ ½ÒÂ¶ÖÐ¹²ÉøÍ¸</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11712101.md#1">»ªÈË¼Ò³¤£º¿××ÓÑ§ÔºÅàÑøÖÐµÂ»ìÑª¶ù ÒâÔÚÉøÍ¸</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11710758.md#1">ÖÐ¹ú¿ÆÑ§¼Ò´´Öíºï»ìÖÖ¶¯Îï ¹ú¼Ê¿ÆÑ§¼ÒÇ´Ôð</a><br><br><p><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11701016.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/190819050754100311-1-150x120.jpg"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11701016.md#1">ÃÀÎªºÎµãÃûÒªÖÆ²Ã¡¶´ó¹«±¨¡·¡¶ÎÄ»ã±¨¡·</a><br>ÃÀ¹úÍ¨¹ýµÄ¡¶Ïã¸ÛÈËÈ¨ÓëÃñÖ÷·¨°¸¡·ÖÐ ...<br><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716284.md#1">ÐÂÎÅ×ÔÓÉ¶ñ»¯ ÖÐ¹²½ñÄê¼à½û¼ÇÕßÊýÈ«ÇòµÚÒ»</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11707663.md#1">ÃÀÍ¼Æ¬ÉÌÅäºÏÖÐ¹²½¨ºÚÃûµ¥ Ô±¹¤ÇëÔ¸º°Í£</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11703901.md#1">»ªÎªÊ§ÃñÐÄ ÃÏÍíÖÛ¼¦ÌÀÐÅ°Ü¸øÀîºéÔª251</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/3/n11697873.md#1">¸ÛÈËÉí·Ý±äÃô¸Ð£¿½»ÒøÏã¸ÛÊ×Ï¯¾­¼ÃÊ¦±»³´</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/3/n11698082.md#1">¸üÑÏÖÆ²Ã ´«°×¹¬Äâ½«»ªÎªÌÞ³öÃÀÒøÐÐÌåÏµ</a><br><br><p><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11714651.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13934610-150x120.jpg"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11714651.md#1">¹ú¼ÊÈËÈ¨ÈÕ ¶àÎ»´óÂ½Î¬È¨ÈËÊ¿±»¿ØÖÆ²»ÄÜÍâ³ö</a><br>12ÔÂ10ÈÕ¹ú¼ÊÈËÈ¨ÈÕ£¬ÖÐ¹ú¶àÃûÎ¬È¨ÈË ...<br><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713727.md#1">²Î¼ÓÈËÈ¨ÈÕ»î¶¯ ÃÀ×¤»ª´óÊ¹¹ÝÇ°ÊýÊ®ÈË±»×¥</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713745.md#1">²ØÉí¼Ò¾ß´ÓÄ«Î÷¸çÍµ¶ÉÃÀ¹ú 11ÖÐ¹úÈË±»¾Ð</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11707400.md#1">ÒßÃçÊÜº¦¶ùÍ¯µ½±±¾©ÎÀ½¡Î¯Î¬È¨ ÓÐ¼Ò³¤±»¾Ð</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11701647.md#1">·¨ÖÆÈÕ¸÷µØÃñÖÚÎ¬È¨ ¹úÐÅ¾Ö·ÃÃñÈËÍ·Ó¿Ó¿</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/3/n11698433.md#1">ÖÐ¹²¾å¿¹ÕùÂûÑÓÈ«¹ú Ã¯Ãû¡°Ê±´ú¸ïÃü¡±³É¹¦</a><br><br><p><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>¾ÅÆÀ¹²²úµ³</strong></p></h2><a href="https://github.com/alzmt2820/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">¡¾Ò»¡¿ÆÀ¹²²úµ³ÊÇÊ²Ã´</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">¡¾¶þ¡¿ÆÀÖÐ¹ú¹²²úµ³ÊÇÔõÑùÆð¼ÒµÄ</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">¡¾Èý¡¿ÆÀÖÐ¹ú¹²²úµ³µÄ±©Õþ</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">¡¾ËÄ¡¿ÆÀ¹²²úµ³ÊÇ·´ÓîÖæµÄÁ¦Á¿</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">¡¾Îå¡¿ÆÀ½­ÔóÃñÓëÖÐ¹²Ïà»¥ÀûÓÃÆÈº¦·¨ÂÖ¹¦</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">¡¾Áù¡¿ÆÀÖÐ¹ú¹²²úµ³ÆÆ»µÃñ×åÎÄ»¯</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">¡¾Æß¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÉ±ÈËÀúÊ·</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">¡¾°Ë¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÐ°½Ì±¾ÖÊ</a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">¡¾¾Å¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÁ÷Ã¥±¾ÐÔ</a></td><td VALIGN=TOP width="352"><h2><p><strong>ÈýÍË´ó³±</strong></p></h2><strong>ÍË³öÖÐ¹²µ³¡¢ÍÅ¡¢¶Ó×ÜÈËÊý:
 
